--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
