--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "mailgun.js": "^8.0.6",
     "react": "^18.2.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-toastify": "^9.1.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
