--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
